--- a/styles/main.css
+++ b/styles/main.css
@@ -2368,6 +2368,21 @@ div.menu li.animate:nth-of-type(6) {
     margin-right: 30px;
 }
 
+.lSpg > li a {
+    width: 16px !important;
+    height: 16px !important;
+}
+
+.lSpg > li:hover a,a:hover {
+    background-color: #666666 !important;
+}
+
+.lSpg > li.active a {
+    /* width: 16px !important; */
+    /* height: 16px !important; */
+    background-color: white !important;
+}
+
 @keyframes preload-inner {
     0% {
         transform: rotate(0) scale(1);
