--- a/views/login.html
+++ b/views/login.html
@@ -70,7 +70,6 @@
 </head>
 
 <body>
-    <!--        <h1>New Page</h1>-->
     <main class="main" id="main">
         <section class="form__section">
             <div class="container">
@@ -95,7 +94,7 @@
                             <label for="form-pass" class="form__input">
                                 <span class="label">Password</span>
                                 <input type="password" id="form-pass" placeholder="••••••••" required
-                                    autocomplete="current-password">                                <!--                            <span class="form__input-error">incorrect password</span>-->
+                                    autocomplete="current-password">
                             </label>
 
                             <div class="form__footer">
@@ -127,6 +126,8 @@
 
     <script src="../js/login.js"></script>
     <script src="../js/transitions.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@0.20.6/dist/web3.min.js"></script>
 
 </body>
 
