--- a/views/register.html
+++ b/views/register.html
@@ -70,7 +70,6 @@
 </head>
 
 <body>
-    <!--        <h1>New Page</h1>-->
     <main class="main" id="main">
         <section class="form__section">
             <div class="container">
@@ -87,21 +86,18 @@
                         <form action="#" class="form__main-form">
 
                             <label for="form-name" class="form__input">
-                                <span class="label">Full Name</span>
+                                <span class="label">Name</span>
                                 <input type="text" id="form-name" placeholder="John Doe" required>
-                                <!-- <span class="form__input-error d-none">incorrect name</span> -->
                             </label>
 
                             <label for="form-pass" class="form__input">
                                 <span class="label">Password</span>
                                 <input type="password" id="form-pass" placeholder="••••••••" required>
-                                <!--                                    <span class="form__input-error">incorrect password</span>-->
                             </label>
 
                             <label for="form-mail" class="form__input">
                                 <span class="label">E-mail</span>
                                 <input type="email" id="form-mail" placeholder="sample@gmail.com">
-                                <!-- <span class="form__input-error">invalid e-mail</span> -->
                             </label>
 
                             <div class="form__footer">
@@ -132,6 +128,8 @@
 
     <script src="../js/register.js"></script>
     <script src="../js/transitions.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@0.20.6/dist/web3.min.js"></script>
 
 </body>
 
