updates to User Account page

--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -80,32 +80,32 @@
                             <img src="../img/sprites/intermediate-svg/main-logo.svg" alt="logo" class="main-logo__img">
                         </a>
                         <ul class="main-nav__list">
-                            <li class="main-nav__item"><a class="main-nav__item-link" href="#">About</a></li>
-                            <li class="main-nav__item"><a class="main-nav__item-link" href="#">Roadmap</a></li>
-                            <li class="main-nav__item"><a class="main-nav__item-link" href="#">Our team</a></li>
+                            <li class="main-nav__item"><a class="main-nav__item-link" href="../index.html#about">About</a></li>
+                            <li class="main-nav__item"><a class="main-nav__item-link" href="../index.html#roadmap">Roadmap</a></li>
+                            <li class="main-nav__item"><a class="main-nav__item-link" href="../index.html#our-team">Our team</a></li>
                         </ul>
                     </div>
 
                     <div class="main-nav__rightside">
                         <ul class="main-nav__rightside-list main-nav__rightside-account">
-                            <li class="main-nav__rightside-item">
+                            <li class="main-nav__rightside-item d-none">
                                 <a class="main-nav__rightside-link" href="#">
                                     <img src="../img/sprites/intermediate-svg/search.svg" alt="">
                                 </a>
                             </li>
-                            <li class="main-nav__rightside-item">
+                            <li class="main-nav__rightside-item d-none">
                                 <a class="main-nav__rightside-link" href="#">
                                     <img src="../img/sprites/intermediate-svg/message.svg" alt="">
                                     <span class="main-nav__link-badge badge">174</span>
                                 </a>
                             </li>
-                            <li class="main-nav__rightside-item">
+                            <li class="main-nav__rightside-item d-none">
                                 <a class="main-nav__rightside-link" href="#">
                                     <img src="../img/sprites/intermediate-svg/bell.svg" alt="">
                                     <span class="main-nav__link-badge badge">7</span>
                                 </a>
                             </li>
-                            <li class="main-nav__rightside-item">
+                            <li class="main-nav__rightside-item d-none">
                                 <a class="main-nav__rightside-link main-nav__rightside-link--coin" href="#">
                                     <img src="../img/sprites/intermediate-svg/mini-logo.svg" alt="">
                                     <span>78.45</span>
@@ -128,7 +128,7 @@
                                         </div>
                                         <div class="account__menu">
                                             <ul class="account__menu-list">
-                                                <li class="account__menu-item">
+                                                <li class="account__menu-item d-none">
                                                     <a href="#" class="account__menu-link">
                                                         <div class="main-menu__link-icon">
                                                             <img src="../img/sprites/intermediate-svg/mini-logo.svg"
@@ -137,7 +137,7 @@
                                                         <span class="main-menu__link-title">Profile</span>
                                                     </a>
                                                 </li>
-                                                <li class="account__menu-item">
+                                                <li class="account__menu-item d-none">
                                                     <a href="#" class="account__menu-link">
                                                         <div class="main-menu__link-icon">
                                                             <img src="../img/sprites/intermediate-svg/mini-logo.svg"
@@ -146,7 +146,7 @@
                                                         <span class="main-menu__link-title">Wallet</span>
                                                     </a>
                                                 </li>
-                                                <li class="account__menu-item">
+                                                <li class="account__menu-item d-none">
                                                     <a href="#" class="account__menu-link">
                                                         <div class="main-menu__link-icon">
                                                             <img src="../img/sprites/intermediate-svg/mini-logo.svg"
@@ -244,20 +244,20 @@
                                 </div>
                                 <div class="footer__nav">
                                     <ul class="footer__nav-list">
-                                        <li class="footer__nav-item"><a href="#about"
+                                        <li class="footer__nav-item"><a href="../index.html#about"
                                                 class="footer__nav-link goTo">About</a>
                                         </li>
-                                        <li class="footer__nav-item"><a href="#roadmap"
+                                        <li class="footer__nav-item"><a href="../index.html#roadmap"
                                                 class="footer__nav-link goTo">Roadmap</a>
                                         </li>
                                         <li class="footer__nav-item"><a target="_blank" href="whitepaper.pdf"
                                                 class="footer__nav-link">WHITEPAPER</a></li>
                                     </ul>
                                     <ul class="footer__nav-list">
-                                        <li class="footer__nav-item"><a href="#how" class="footer__nav-link goTo">How it
+                                        <li class="footer__nav-item"><a href="../index.html#how" class="footer__nav-link goTo">How it
                                                 works</a>
                                         </li>
-                                        <li class="footer__nav-item"><a href="#our-team"
+                                        <li class="footer__nav-item"><a href="../index.html#our-team"
                                                 class="footer__nav-link goTo">Our
                                                 team</a>
                                         </li>
@@ -304,7 +304,7 @@
                                             class="footer__social-icon">
                                     </a>
                                 </div>
-                                <div class="footer__totop">
+                                <div class="footer__totop d-none">
                                     <a href="#header" class="goTo footer__totop-btn">
                                         <span>TO TOP</span>
                                         <img src="../img/sprites/intermediate-svg/totop.svg" alt="totop">
