--- a/styles/main.css
+++ b/styles/main.css
@@ -2466,6 +2466,7 @@ a:not(.btn):hover {
     width: 100%;
     margin-top: 45px;
     padding-top: 37px;
+    position: relative;
 }
 
 .no-padding {
