Fixed whitepaper links on user account page

--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -193,7 +193,7 @@
                             <li class="main-nav__item light-label" id="user-created"></li>
                             <li class="main-nav__item light-label" id="user-email"></li>
                         </ul>
-                        <a target="_blank" href="whitepaper.pdf" class="btn btn--simple float-right no-padding">
+                        <a target="_blank" href="../whitepaper.pdf" class="btn btn--simple float-right no-padding">
                             <img src="../img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"
                                 alt="icon writing">
                             <span>WHITEPAPER</span>
@@ -250,7 +250,7 @@
                                         <li class="footer__nav-item"><a href="../index.html#roadmap"
                                                 class="footer__nav-link goTo">Roadmap</a>
                                         </li>
-                                        <li class="footer__nav-item"><a target="_blank" href="whitepaper.pdf"
+                                        <li class="footer__nav-item"><a target="_blank" href="../whitepaper.pdf"
                                                 class="footer__nav-link">WHITEPAPER</a></li>
                                     </ul>
                                     <ul class="footer__nav-list">
