--- a/styles/main.css
+++ b/styles/main.css
@@ -2135,8 +2135,22 @@ div.menu li.animate:nth-of-type(6) {
 .account__avatar-img {
     display: block;
     width: 100%;
+    height: 100%;
     border-radius: 50%;
     border: 2px solid rgba(255, 255, 255, 0.4);
+    background-color: #ffd788;
+    position: relative;
+}
+
+.account__avatar-initials {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    text-shadow: 1px 1px 2px black;
 }
 
 .account__avatar-name {
@@ -2520,7 +2534,7 @@ a:not(.btn):hover {
     font-weight: normal;
     font-size: 14px;
     line-height: 130.08%;
-    color: #FFFFFF;
+    color: #ffffff;
     opacity: 0.4;
     overflow: auto;
 }
@@ -2532,7 +2546,7 @@ a:not(.btn):hover {
     font-size: 14px;
     line-height: 130.08%;
     text-decoration-line: underline;
-    color: #FFD788;
+    color: #ffd788;
 }
 
 .user-section-container {
