--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -117,8 +117,9 @@
                                         <div class="account__avatar">
                                             <div class="account__avatar-wrap">
                                                 <div class="account__avatar-photo">
-                                                    <img src="../img/main/team-james.png" alt="avatar"
-                                                        class="account__avatar-img">
+                                                    <div class="account__avatar-img">
+                                                        <span class="account__avatar-initials" id="user-avatar-initials">BF</span>
+                                                    </div>
                                                 </div>
                                                 <div class="account__avatar-name" id="user-avatar-label"></div>
                                             </div>
@@ -189,7 +190,7 @@
                         </ul>
                         <ul class="user-account-header float-left">
                             <li class="main-nav__item light-label"><img src="../img/main/logo32.png"
-                                    class="user-balance-icon" /><span class="centered-text">0.00</span></li>
+                                    class="user-balance-icon" /><span class="centered-text" id="user-curate-balance">0</span></li>
                             <li class="main-nav__item light-label" id="user-created"></li>
                             <li class="main-nav__item light-label" id="user-email"></li>
                         </ul>
@@ -323,6 +324,8 @@
 
                 <script src="../js/userAccount.js"></script>
                 <script src="../js/transitions.js"></script>
+                <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@0.20.6/dist/web3.min.js"></script>
+
 </body>
 
 </html>
